test/corpus/simple.txt
======
Simple sub-doc
:language(papier)
======
Text

# title {
	sample_content
}
---

(papier
 (text
  (line
	 (word))
  (line))
 (sub_document
  (title
   (word))
  (contents)))


======
Simple raw sub-doc
:language(papier)
======
Text

# title !EoF{
	sample_content
}EoF!
---

(papier
 (text
  (line
	 (word))
  (line))
 (sub_document
  (title
   (word))
  (raw_contents)))
