test/corpus/tokens.txt
======
Token - word
:language(papier)
======
a

---
(papier
 (text
  (line
   (word))))


======
Token - uuid
:language(papier)
======
!12345678-1234-1234-1234-123456789012

---
(papier
 (text
  (line
   (word
    (uuid)))))


======
Token - alias
:language(papier)
======
!!emacs

---
(papier
 (text
  (line
   (word
    (alias)))))


======
Token - ref
:language(papier)
======
!?https://papier-lang.org?cool=yes

---
(papier
 (text
  (line
   (word
    (ref)))))


======
Token - tag
:language(papier)
======
#hashtag

---
(papier
 (text
  (line
   (word
    (tag)))))


======
Token - fmt
:language(papier)
======
@org

---
(papier
 (text
  (line
   (word
    (fmt)))))
