test/corpus/trailing_newlines.txt
======
Trailing - text and document with trailing newline
:language(papier)
======
Text
# Title {
	Such_contents
}

---

(papier
 (text
  (line
   (word)))
 (sub_document
  title: (title
	        (word))
  contents: (contents))
 (text
  (line)))

======
Trailing - header and text without trailing newline
:language(papier)
======
# Title {
	Such_contents
}
Text
---

(papier
 (sub_document
  title: (title
	        (word))
  contents: (contents))
 (text
  (line)
  (line
   (word))))
